[package]
name = "dht-lens"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
chardetng = "0.1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
encoding_rs = "0.8"
hex = "0.4"
libsql = "0.9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
socket2 = "0.5"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
